# qwt_slide_with_curve_bg

./: CMakeLists.txt  SliderBox.cpp  SliderBox.h  widget.cpp  widget.h
